tests/invalid/BrokenMethod.java
class BrokenMethod {
    public void run {
        return;
    }
}
